--- a/movie_recommandation.ipynb
+++ b/movie_recommandation.ipynb
@@ -1887,7 +1887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_20612\\4269038247.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_24688\\4269038247.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1929,7 +1929,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_20612\\3214958533.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_24688\\3214958533.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2003,7 +2003,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_20612\\3973021881.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Dhruv Saxena\\AppData\\Local\\Temp\\ipykernel_24688\\3973021881.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2235,6 +2235,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19995"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_id = new_df.iloc[0].movie_id\n",
+    "movies_id "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [],
@@ -2276,7 +2318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
